make visually-hidden elements focusable, clean up
could not add both :not(:focus):not(:active) so removed :not(:active)

TODO file bug on 11ty/webc

clean up logging on accessible-emoji

--- a/_components/visually-hidden.webc
+++ b/_components/visually-hidden.webc
@@ -1,6 +1,8 @@
 <style webc:scoped>
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
-:host {
+/* https://blog.logrocket.com/design-accessibility-css-visually-hidden-class/ */
+/* https://front-end.social/@joshwcomeau/112574609127860924 */
+:host:not(:focus) {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
 	height: 1px;
