--- a/_components/accessible-emoji.webc
+++ b/_components/accessible-emoji.webc
@@ -1,10 +1,6 @@
 <script webc:root="override" webc:type="js" webc:raw>
 let label = "";
-if (alt) {
-	label = alt.toString();
-} else {
-	label = emojiShortName(emoji);
-}
+alt ? label = alt.toString() : label = emojiShortName(emoji);
 // via
 // https://kittygiraudel.com/2021/01/02/accessible-emojis-with-11ty/
 // https://tink.uk/accessible-emoji/
