accessible-emoji: use conditional (ternary) operator for brevity (#4)
1d2c46c accessible-emoji: use conditional (ternary) operator for brevity
e27c522 useless line
56f7f28 visually-hidden: bump comments down to the end

--- a/_components/accessible-emoji.webc
+++ b/_components/accessible-emoji.webc
@@ -1,11 +1,6 @@
 <script webc:root="override" webc:type="js" webc:raw>
 let label = "";
-if (alt) {
-	label = alt.toString();
-} else {
-	label = emojiShortName(emoji);
-}
-// via
+alt ? label = alt.toString() : label = emojiShortName(emoji);
 // https://kittygiraudel.com/2021/01/02/accessible-emojis-with-11ty/
 // https://tink.uk/accessible-emoji/
 // https://adrianroselli.com/2016/12/accessible-emoji-tweaked.html
