--- a/_components/visually-hidden.webc
+++ b/_components/visually-hidden.webc
@@ -1,4 +1,12 @@
 <style webc:scoped>
+/**
+ * Visually hide content while allowing it to remain focusable
+ *
+ * Learn more: 
+ * - https://www.a11yproject.com/posts/how-to-hide-content/
+ * - https://blog.logrocket.com/design-accessibility-css-visually-hidden-class/
+ * - https://front-end.social/@joshwcomeau/112574609127860924
+ */
 	:host:not(:has(:is(a:active, a:focus))) {
 		clip: rect(0 0 0 0);
 		clip-path: inset(50%);
@@ -11,7 +19,4 @@
 	:host:has(:is(a:active, a:focus)) {
 		margin: var(--box-margin);
 	}
-/* https://www.a11yproject.com/posts/how-to-hide-content/ */
-/* https://blog.logrocket.com/design-accessibility-css-visually-hidden-class/ */
-/* https://front-end.social/@joshwcomeau/112574609127860924 */
 </style>
